--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -3,10 +3,19 @@
 
 <!-- 🐨 Create (in HTML) a <body> with a <div> with the id of "root" -->
 <!-- 🐨 Then create a <script type="module"> for your JavaScript -->
+<body></body>
 
 <!-- These next instructions are to be written in JavaScript in the <script> tag -->
 <!-- 🐨 Create a div -->
 <!--   💰 document.createElement('div') -->
+<script type="module">
+  const root = document.createElement('div')
+  root.id = 'root'
+  document.body.append(root)
+  const div = document.createElement('div')
+  div.textContent = 'Hello World'
+  root.append(div)
+</script>
 
 <!-- 🐨 Set the div's textContent to 'Hello World' and className to 'container' -->
 <!--   💰 div.textContent = '...' -->
